# spressolisp

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  shell.nix
.github/workflows/: rust.yml
benches/: spresso_benchmark.rs
examples/: basic_math.spr
src/: ast.rs  env.rs  errors.rs  eval.rs  lib.rs  main.rs
src/eval/: conditional.rs  functions.rs  lists.rs  logical.rs  loops.rs  macros.rs  mod.rs  number.rs  relational.rs  types.rs
src/utils/: mod.rs  range_stack.rs
tests/: basic_math_test.rs  closures.rs  conditionals_test.rs  lambda_test.rs  lang_test.rs  list_test.rs  loop_tests.rs  macro_test.rs  mem_test_0.rs  mem_test_1.rs  mem_test_common.rs  mem_test_no_gc.rs  simple_test.rs  string_test.rs  syntax_test.rs  unit_test.rs
tests/common/: mod.rs
