[package]
name = "spressolisp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "9.1.0" # for the repl
home = "0.5.3" # for getting home_dir
assert_float_eq = "1.1.1" # floating point asserts fail

[dev-dependencies]
# benchmarking
criterion = "0.3"

[[bench]]
name = "spresso_benchmark"
harness = false
