[package]
name = "spressolisp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "9.1.0" # for the repl
home = "0.5.3" # for getting home_dir
itertools = "0.10.2" # better iterators

[dev-dependencies]
# benchmarking
criterion = "0.3"
# for floating point asserts
assert_float_eq = "1.1.1"

[[bench]]
name = "spresso_benchmark"
harness = false
